--- a/tardis/tardis_portal/templates/tardis_portal/ajax/exps_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/exps_list.html
@@ -12,10 +12,10 @@
 {% endif %}
 
 {% for exp in experiments %}
-  <div class="card border-0" style="background-color: #f5fbff">
-    <div class="card-header border-bottom-0" style="background-color: rgba(0,0,0,0)">
+  <div class="card mb-2" style="background-color: #f5fbff">
+    <div class="card-body py-2" style="background-color: rgba(0,0,0,0)">
       <div class="row">
-        <div id="toggle-{{exp.id}}" class="accordion-toggle col-8" data-toggle="collapse">
+        <div id="toggle-{{exp.id}}" class="accordion-toggle col-8 px-1" data-toggle="collapse">
           <input type="hidden" class="exp-index" value="{{ forloop.counter }}">
           <a class="explink"
              href="{% url 'tardis_portal.view_experiment' exp.id %}">{{ exp.title }}</a>
@@ -25,23 +25,24 @@
         </div>
       </div> {% comment %} class="row" {% endcomment %}
       <div class="row">
-      <div class="col-6">
-        {% experiment_authors exp %}
+        <div class="card-subtitle text-muted col-6 px-1">
+          {% experiment_authors exp %}
+        </div>
+        <div class="col">
+          <span class="float-right">
+            {% experiment_download_link exp %}
+          </span>
+        </div>
+      </div>{% comment %} class="row" {% endcomment %}
+      <div class="row">
+        <div id="collapse-{{exp.id}}" class="collapse col-md-9 mx-1">
+          <div class="accordion-inner">
+            <p class="card-text small mb-1">{{exp.description|default:""|bleach}}</p>
+            <div id="latest-dataset-{{exp.id}}"></div>
+          </div> {% comment %} class="accordion-inner" {% endcomment %}
+        </div> {% comment %} class="accordion-body" {% endcomment %}
       </div>
-      <div class="col">
-        <span class="float-right">
-          {% experiment_download_link exp %}
-        </span>
-      </div>
-    </div>{% comment %} class="row" {% endcomment %}
-    <div id="collapse-{{exp.id}}"
-         class="panel-collapse collapse">
-      <div class="accordion-inner">
-        <p>{{exp.description|default:""|bleach}}</p>
-        <div id="latest-dataset-{{exp.id}}"></div>
-      </div> {% comment %} class="accordion-inner" {% endcomment %}
-    </div> {% comment %} class="accordion-body" {% endcomment %}
-  </div>
+    </div>
   </div>{% comment %} class="card" {% endcomment %}
 {% empty %}
   <p>You do not own any Experiment on this server.<br/>
