--- a/tardis/tardis_portal/templates/tardis_portal/my_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/my_data.html
@@ -12,7 +12,7 @@
 <div id="content" class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <h2 class="d-block d-sm-none">Experiments</h2>
+      <h3 class="d-block d-sm-none">Experiments</h3>
       <div class="pull-right pb-1">
         {% if perms.tardis_portal.add_experiment %}
         <a id="create-experiment"
@@ -24,7 +24,7 @@
         {% endif %}
       </div>  <!-- class="pull-right" -->
       <div class="pull-left">
-        <h2 class="d-none d-sm-block" style="text-align: center">Experiments</h2>
+        <h3 class="d-none d-sm-block" style="text-align: center">Experiments</h3>
       </div>
     </div>  <!-- class="col-md-12" -->
   </div>  <!-- class="row" -->
@@ -39,16 +39,16 @@
 
       {% if owned_experiments %}
       <div class="pull-left">
-        <h3><strong>{{ owned_experiments.count }}</strong>
+        <h4><strong>{{ owned_experiments.count }}</strong>
         Experiment{{ owned_experiments.count|pluralize}} You Own
-        </h3>
+        </h4>
       </div>
       <div class="pull-right">
-        <button type="button" class="btn btn-success btn-sm"
-                onclick="$('#myowned .panel-collapse').collapse('hide');" >
+        <button type="button" class="btn btn-outline-secondary btn-sm"
+                onclick="$('#myowned .collapse').collapse('hide');" >
         Collapse all</button>
-        <button type="button" class="btn btn-success btn-sm"
-                onclick="$('#myowned .panel-collapse').collapse('show');" >
+        <button type="button" class="btn btn-outline-secondary btn-sm"
+                onclick="$('#myowned .collapse').collapse('show');" >
         Expand all</button>
       </div>
       <div class="clearfix"></div>
