--- a/tardis/tardis_portal/templates/tardis_portal/public_data.html
+++ b/tardis/tardis_portal/templates/tardis_portal/public_data.html
@@ -89,11 +89,11 @@
                     {% for ds in exp.datasets.all|dictsortreversed:"id"|slice:":1" %}
                       {% if forloop.first %}
                         <ul class="list-group borderless mt-2">
-                          <li class="list-group-item dataset-list-header small py-1">
+                          <li class="list-group-item dataset-list-header small px-1 py-1">
                             <em>Latest dataset in this experiment:</em>
                           </li>
                       {% endif %}
-                      <li class="list-group-item dataset-list-item small py-1">
+                      <li class="list-group-item dataset-list-item small px-2 py-1">
                           <i class="fa fa-folder o-6"></i>
                           <a class="dataset-link"
                              href="{% url 'tardis_portal.view_dataset' ds.id %}">
