Refining experiment card layouts

--- a/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_latest_dataset.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/experiment_latest_dataset.html
@@ -31,7 +31,9 @@
     </ul>
   {% endif %}
 {% empty %}
-  <small>
-    <em>There are no datasets in this experiment.</em>
-  </small>
+  <ul class="list-group borderless mt-2">
+    <li class="list-group-item dataset-list-header small px-1 py-1">
+      <em>There are no datasets in this experiment.</em>
+    </li>
+  </ul>
 {% endfor %}
