--- a/tardis/tardis_portal/templates/tardis_portal/ajax/exps_list.html
+++ b/tardis/tardis_portal/templates/tardis_portal/ajax/exps_list.html
@@ -35,7 +35,7 @@
         </div>
       </div>{% comment %} class="row" {% endcomment %}
       <div class="row">
-        <div id="collapse-{{exp.id}}" class="collapse col-md-9 mx-1">
+        <div id="collapse-{{exp.id}}" class="collapse col-md-9 px-1">
           <div class="accordion-inner">
             <p class="card-text small mb-1">{{exp.description|default:""|bleach}}</p>
             <div id="latest-dataset-{{exp.id}}"></div>
